apps/wallabag/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: wallabag
          image: ghcr.io/wallabag/docker:2.6.13
          ports:
            - containerPort: 80
