apps/wallabag/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - port: 80
