apps/wallabag/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - wallabag
  defaultBackend:
    service:
      name: wallabag-app
      port:
        number: 80
